--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -17,7 +17,7 @@ main .hero-container {
   margin-left: auto;
   margin-right: auto;
   color: white;
-  text-shadow: 3px 3px 2px rgb(0 0 0 / 0.7);
+  text-shadow: 3px 3px 2px rgb(0 0 0 / 70%);
 }
 
 .hero picture {
